# cargo-bazel

./: .bazelrc  .gitattributes  .gitignore  404.html  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  crates.bzl  crates_deps.bzl  crates_repository.html  defs.bzl  deps.bzl  deps_bootstrap.bzl  deps_transitive.bzl  index.html  print.html  rules.html  searchindex.js  searchindex.json  version.bzl
docs/: .gitignore  BUILD.bazel  book.toml  docs_deps.bzl  docs_deps_transitive.bzl  index.md
docs/src/: SUMMARY.md
examples/: .gitignore  BUILD.bazel  WORKSPACE.bazel  deleted_packages.bazelrc  example_test.bzl
examples/cargo_aliases/: BUILD.bazel  Cargo.toml  WORKSPACE.bazel
examples/cargo_aliases/src/: lib.rs
examples/cargo_local/: WORKSPACE.bazel
examples/cargo_remote/: WORKSPACE.bazel
examples/cargo_workspace/: WORKSPACE.bazel
examples/cargo_workspace/num_printer/: BUILD.bazel
examples/cargo_workspace/printer/: BUILD.bazel
examples/extra_workspace_members/: BUILD.bazel  WORKSPACE.bazel
examples/multi_package/: WORKSPACE.bazel
examples/multi_package/pkg_a/: BUILD.bazel  Cargo.toml
examples/multi_package/pkg_a/src/: lib.rs
examples/multi_package/sub_pkgs/pkg_b/: BUILD.bazel  Cargo.toml
examples/no_cargo_manifests/: BUILD.bazel  WORKSPACE.bazel
examples/no_cargo_manifests/src/: main.rs
examples/vendor_local_manifests/: BUILD.bazel
examples/vendor_local_manifests/crates/: defs.bzl
examples/vendor_local_manifests/crates/async-stream-0.3.2/: BUILD.bazel
examples/vendor_local_manifests/crates/async-stream-impl-0.3.2/: BUILD.bazel
examples/vendor_local_manifests/crates/fastrand-1.7.0/: BUILD.bazel
examples/vendor_local_manifests/crates/futures-core-0.3.21/: BUILD.bazel
examples/vendor_local_manifests/crates/hermit-abi-0.1.19/: BUILD.bazel
examples/vendor_local_manifests/crates/instant-0.1.12/: BUILD.bazel
examples/vendor_local_manifests/crates/libc-0.2.119/: BUILD.bazel
examples/vendor_local_manifests/crates/lock_api-0.4.6/: BUILD.bazel
examples/vendor_local_manifests/crates/log-0.4.14/: BUILD.bazel
examples/vendor_local_manifests/crates/memchr-2.4.1/: BUILD.bazel
examples/vendor_local_manifests/crates/mio-0.7.14/: BUILD.bazel
examples/vendor_local_manifests/crates/miow-0.3.7/: BUILD.bazel
examples/vendor_local_manifests/crates/ntapi-0.3.7/: BUILD.bazel
examples/vendor_local_manifests/crates/num_cpus-1.13.1/: BUILD.bazel
examples/vendor_local_manifests/crates/parking_lot-0.11.2/: BUILD.bazel
examples/vendor_local_manifests/crates/parking_lot_core-0.8.5/: BUILD.bazel
examples/vendor_local_manifests/crates/proc-macro2-1.0.36/: BUILD.bazel
examples/vendor_local_manifests/crates/quote-1.0.15/: BUILD.bazel
examples/vendor_local_manifests/crates/redox_syscall-0.2.10/: BUILD.bazel
examples/vendor_local_pkgs/: BUILD.bazel
examples/vendor_local_pkgs/crates/: BUILD.bazel  defs.bzl
examples/vendor_remote_manifests/: BUILD.bazel  Cargo.toml
examples/vendor_remote_manifests/crates/: BUILD.async-stream-0.3.2.bazel  BUILD.async-stream-impl-0.3.2.bazel  BUILD.bazel  BUILD.bytes-1.1.0.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.fastrand-1.7.0.bazel  BUILD.futures-core-0.3.21.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.instant-0.1.12.bazel  BUILD.libc-0.2.119.bazel  BUILD.lock_api-0.4.6.bazel  BUILD.log-0.4.14.bazel  BUILD.memchr-2.4.1.bazel  BUILD.mio-0.7.14.bazel  BUILD.mio-0.8.0.bazel  BUILD.miow-0.3.7.bazel  BUILD.ntapi-0.3.7.bazel  BUILD.num_cpus-1.13.1.bazel  BUILD.parking_lot-0.11.2.bazel  BUILD.parking_lot-0.12.0.bazel  BUILD.parking_lot_core-0.8.5.bazel  BUILD.parking_lot_core-0.9.1.bazel  BUILD.pin-project-lite-0.2.8.bazel  BUILD.proc-macro2-1.0.36.bazel  BUILD.quote-1.0.15.bazel  BUILD.redox_syscall-0.2.10.bazel  BUILD.redox_syscall-0.2.11.bazel  BUILD.remove_dir_all-0.5.3.bazel  BUILD.signal-hook-registry-1.4.0.bazel  BUILD.smallvec-1.8.0.bazel  BUILD.socket2-0.4.4.bazel  BUILD.syn-1.0.86.bazel  BUILD.tempfile-3.3.0.bazel  BUILD.tokio-1.16.1.bazel  BUILD.tokio-1.17.0.bazel  BUILD.tokio-macros-1.7.0.bazel  BUILD.tokio-stream-0.1.8.bazel  BUILD.tokio-test-0.4.2.bazel  BUILD.winapi-0.3.9.bazel  BUILD.winapi-i686-pc-windows-gnu-0.4.0.bazel  (+9 more)
examples/vendor_remote_pkgs/: BUILD.bazel
examples/vendor_remote_pkgs/crates/: BUILD.ansi_term-0.12.1.bazel  BUILD.async-trait-0.1.52.bazel  BUILD.axum-0.4.6.bazel  BUILD.axum-0.4.7.bazel  BUILD.axum-core-0.1.2.bazel  BUILD.bazel  BUILD.form_urlencoded-1.0.1.bazel  BUILD.futures-channel-0.3.21.bazel  BUILD.futures-core-0.3.21.bazel  BUILD.futures-sink-0.3.21.bazel  BUILD.futures-task-0.3.21.bazel  BUILD.futures-util-0.3.21.bazel  BUILD.h2-0.3.11.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.http-0.2.6.bazel  BUILD.http-body-0.4.4.bazel  BUILD.http-range-header-0.3.0.bazel  BUILD.httparse-1.6.0.bazel  BUILD.httpdate-1.0.2.bazel  BUILD.hyper-0.14.17.bazel  BUILD.indexmap-1.8.0.bazel  BUILD.instant-0.1.12.bazel  BUILD.libc-0.2.119.bazel  BUILD.lock_api-0.4.6.bazel  BUILD.log-0.4.14.bazel  BUILD.memchr-2.4.1.bazel  BUILD.mio-0.7.14.bazel  BUILD.miow-0.3.7.bazel  BUILD.ntapi-0.3.7.bazel  BUILD.num_cpus-1.13.1.bazel  BUILD.parking_lot-0.11.2.bazel  BUILD.parking_lot_core-0.8.5.bazel  BUILD.pin-project-1.0.10.bazel  BUILD.pin-project-internal-1.0.10.bazel  BUILD.proc-macro2-1.0.36.bazel  BUILD.quote-1.0.15.bazel  BUILD.redox_syscall-0.2.10.bazel  BUILD.redox_syscall-0.2.11.bazel  BUILD.serde-1.0.136.bazel  (+29 more)
private/test/: BUILD.bazel
tests/: BUILD.bazel  examples_test.sh  version_test.rs
tools/bazel_integration/: BUILD.bazel  Cargo.toml  bazel_integration.bzl
tools/bazel_integration/src/: main.rs
tools/cargo_bazel/: BUILD.bazel  Cargo.toml
tools/cargo_bazel/src/: annotation.rs  cli.rs  config.rs  context.rs  digest.rs  lib.rs  lockfile.rs  metadata.rs  rendering.rs  splicing.rs  test.rs  utils.rs
tools/cargo_bazel/test_data/: metadata_generator.py
tools/examples_runner/: BUILD.bazel  Cargo.toml  examples_runner.bzl
tools/examples_runner/src/: main.rs
tools/urls_generator/: BUILD.bazel  Cargo.toml
tools/urls_generator/src/: main.rs
(+158 files in other folders)
