load("@rules_rust//rust:defs.bzl", "rust_test")
load("//tools/examples_runner:examples_runner.bzl", "examples_runner")

# Unfortunately there aren't really options for Bazel-in-Bazel testing.
# This has to be a run target for now...
examples_runner(
    name = "examples",
    cargo_bazel_bin = "//:cargo_bazel_bin",
    distro_archive = "//distro",
    examples_package = "examples",
)

rust_test(
    name = "versions_test",
    srcs = ["version_test.rs"],
    data = [
        "//:Cargo.toml",
        "//:version.bzl",
    ],
    rustc_env = {
        "CARGO_TOML": "$(rootpath //:Cargo.toml)",
        "VERSION_BZL": "$(rootpath //:version.bzl)",
    },
    use_libtest_harness = False,
)
