[package]
name = "aliases"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pinned_log = { package = "log", version = "0.3.9" }

# Contains a transitive alias
value-bag = "=1.0.0-alpha.7"

[dev-dependencies]
env_logger = "0.9.0"
